fixed issues with container pushing screen wider on mobile

--- a/src/components/contentIndex/contentIndex.module.css
+++ b/src/components/contentIndex/contentIndex.module.css
@@ -1,5 +1,5 @@
 .panel {
-  margin: 2rem 2rem;
+  margin: 2rem 0rem;
 }
 
 .article {
